# linkgnome

./: .dockerignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  fly.toml  opencode.json  pyproject.toml
.github/workflows/: ci.yml  deploy-web.yml  preview.yml  publish.yml
src/linkgnome/: __init__.py  cache.py  cli.py  config.py  db.py  link_meta.py  scorer.py  setup.py  tui.py
src/linkgnome/fetchers/: base.py  bluesky.py  mastodon.py
tests/: test_cache.py  test_config.py  test_scorer.py
tests/fetchers/: test_bluesky.py  test_mastodon.py
web/: .dockerignore  .gitignore  Dockerfile  docker-entrypoint.sh  fly.toml  litefs.yml  manage.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js
web/accounts/: __init__.py  admin.py  bluesky.py  forms.py  mastodon.py  models.py  urls.py  views.py
web/accounts/migrations/: 0001_initial.py  0002_alter_blueskyaccount_user_alter_mastodonaccount_user_and_more.py  0003_set_site_domain.py
web/accounts/templates/accounts/: check_email.html  connect_bluesky.html  connect_failed.html  connect_mastodon.html  login.html  plan_limit.html  rate_limited.html  settings.html  signup.html  verify_email.txt  verify_failed.html  verify_success.html
web/billing/: __init__.py  admin.py  models.py  urls.py  views.py  webhook.py
web/billing/migrations/: 0001_initial.py  0002_price_delete_plan.py  0003_seed_prices.py
web/config/: settings.py  urls.py  wsgi.py
web/feeds/: __init__.py  admin.py  apps.py  models.py  tasks.py  urls.py  views.py
web/feeds/management/: __init__.py
web/feeds/management/commands/: fetch_all_feeds.py  refresh_public_feed.py
web/feeds/migrations/: 0001_initial.py  0002_scoredlink_author_post_urls.py  0003_scoredlink_last_posted_at.py  0004_alter_scoredlink_last_seen_at.py
web/feeds/templates/components/: public_link_card.html
web/feeds/templates/feeds/: _filter_bar.html  _link_card.html  dashboard.html  feed_content.html  feed_table.html  filter_oob.html  landing.html  pricing.html  refresh_button.html  refresh_result.html
web/links/: __init__.py  admin.py  models.py
web/links/migrations/: 0001_initial.py  0002_publiclink_alter_link_options.py  0003_remove_publiclink.py
web/static/src/: input.css
web/templates/: base.html  stagedoor_email.txt  stagedoor_token_input.html
web/tests/: __init__.py  test_accounts_views.py  test_bluesky.py  test_feeds_views.py  test_link_models.py  test_mastodon.py  test_models.py  test_tasks.py  test_time_range.py
