[project]
name = "linkgnome"
version = "0.1.0"
description = "Terminal-based link aggregator for Mastodon and Bluesky feeds"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "phildini" }
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx[http2]>=0.27.0",
    "questionary>=2.0.0",
    "diskcache>=5.6.0",
]

[project.scripts]
linkgnome = "linkgnome.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "respx>=0.23.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]
