[project]
name = "linkgnome"
dynamic = ["version"]
description = "Terminal-based link aggregator for Mastodon and Bluesky feeds"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD 3"}
authors = [
    {name = "Philip James", email = "phildini@phildini.net"},
]
maintainers = [
    {name = "Philip James", email = "phildini@phildini.net"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx[http2]>=0.27.0",
    "questionary>=2.0.0",
    "diskcache>=5.6.0",
    "certifi>=2026.4.22",
]

[project.urls]
Homepage = "https://github.com/phildini/linkgnome"
Documentation = "https://github.com/phildini/linkgnome/blob/main/README.md"
Repository = "https://github.com/phildini/linkgnome"
Issues = "https://github.com/phildini/linkgnome/issues"
Changelog = "https://github.com/phildini/linkgnome/blob/main/CHANGELOG.md"
Mastodon = "https://wandering.shop/@phildini"
Bluesky = "https://bsky.app/profile/phildini.net"


[dependency-groups]
dev = [
    "respx>=0.23.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
linkgnome = "linkgnome.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/linkgnome/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/linkgnome"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
