[project]
name = "linkgnome-web"
version = "0.1.0"
description = "Web interface for LinkGnome - Terminal-based link aggregator"
requires-python = ">=3.12"
license = {text = "BSD 3"}
authors = [
    {name = "Philip James", email = "phildini@phildini.net"},
]

dependencies = [
    "django>=5.1,<6.0",
    "linkgnome>=0.1.0",
    "gunicorn>=23.0.0",
    "django-axes>=6.0.0",
    "django-ratelimit>=4.1.0",
    "django-anymail[postmark]>=12.0.0",
    "django-cryptography>=1.1.0",
    "httpx>=0.27.0",
    "whitenoise>=6.0.0",
]

[tool.uv.sources]
linkgnome = { path = ".." }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["accounts*", "feeds*", "billing*", "config*"]
